--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
         <h1>홍승보</h1>
-        <p>포트폴리오 웹사이트에 오신 것을 환영합니다</p>
+        <p>포트폴리오 웹사이트에 오신 것을 가나다라마바사사</p>
     </div>
 </body>
 </html>
