--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             }
         }
         
+        .profile-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 30px;
+            border: 5px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        
         h1 {
             font-size: 4rem;
             font-weight: 700;
@@ -69,8 +79,9 @@
 </head>
 <body>
     <div class="container">
+        <img src="images/profile.jpg" alt="홍승보 프로필 사진" class="profile-img">
         <h1>홍승보</h1>
-        <p>포트폴리오 웹사이트에 오신 것을 가나다라마바사사</p>
+        <p>포트폴리오 웹사이트에 오신 것을 환영합니다</p>
     </div>
 </body>
 </html>
